# bpu

./: .gitignore  LICENSE  README.md  pyproject.toml
accord/_tests/: test_version.py
accord/version/: README.md  __init__.py  version.py
bpu/_tests/: test_version.py
bpu/version/: README.md  version.py
scripts/: README.md  build.sh
